[gd_scene load_steps=13 format=3 uid="uid://1fgrvi3d8xdc"]

[ext_resource type="Script" path="res://Piezas/piezaPuzzle.gd" id="1_y2obs"]
[ext_resource type="Texture2D" uid="uid://be1024ohrfg16" path="res://Sprites/mini_games/pieza2.png" id="2_h6p50"]
[ext_resource type="FontFile" uid="uid://by6docfjh045t" path="res://Fonts/Retropix-Regular.ttf" id="3_wuleg"]

[sub_resource type="LabelSettings" id="LabelSettings_1rv6w"]
font = ExtResource("3_wuleg")
font_size = 135
font_color = Color(0, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wn6io"]
size = Vector2(388, 260)

[sub_resource type="Animation" id="Animation_d5m34"]
resource_name = "Correcto"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractivoLetra(vacio):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.988766, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractivoLetra(vacio):scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_s776g"]
resource_name = "Final"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractivoLetra(vacio):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0, 0.988235, 0, 1), Color(0.498975, 0.754062, 0.992249, 1)]
}

[sub_resource type="Animation" id="Animation_hcf3e"]
resource_name = "Incorrecto"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractivoLetra(vacio):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.984314, 0.0509804, 0, 1), Color(0.984314, 0.0509804, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractivoLetra(vacio):offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_s0v8n"]
resource_name = "Pista"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractivoLetra(vacio):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0.231373, 1), Color(1, 1, 1, 1), Color(1, 1, 0.176471, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n2m34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractivoLetra(vacio):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InteractivoLetra(vacio):offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InteractivoLetra(vacio):scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tkeuy"]
resource_name = "Retorno"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractivoLetra(vacio):modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.498039, 0.752941, 0.992157, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3xoe"]
_data = {
"Correcto": SubResource("Animation_d5m34"),
"Final": SubResource("Animation_s776g"),
"Incorrecto": SubResource("Animation_hcf3e"),
"Pista": SubResource("Animation_s0v8n"),
"RESET": SubResource("Animation_n2m34"),
"Retorno": SubResource("Animation_tkeuy")
}

[node name="Pieza" type="Node2D"]
script = ExtResource("1_y2obs")

[node name="InteractivoLetra(vacio)" type="Sprite2D" parent="."]
texture = ExtResource("2_h6p50")

[node name="Label" type="Label" parent="InteractivoLetra(vacio)"]
offset_left = -632.0
offset_top = -110.0
offset_right = 707.0
offset_bottom = 120.0
text = "She"
label_settings = SubResource("LabelSettings_1rv6w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -540.0
offset_top = -223.0
offset_right = 294.0
offset_bottom = 85.0
scale = Vector2(1.5, 1.5)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(21, 1)
shape = SubResource("RectangleShape2D_wn6io")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r3xoe")
}

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
